--- a/notebooks/create_marker_dataset.ipynb
+++ b/notebooks/create_marker_dataset.ipynb
@@ -735,28 +735,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 77,
    "id": "96570f92-3a66-4639-919b-0aee6f4a45e1",
    "metadata": {},
    "outputs": [
     {
-     "ename": "JSONDecodeError",
-     "evalue": "Expecting value: line 1 column 1 (char 0)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mJSONDecodeError\u001b[39m                           Traceback (most recent call last)",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/main/missions/.venv/lib/python3.13/site-packages/requests/models.py:974\u001b[39m, in \u001b[36mResponse.json\u001b[39m\u001b[34m(self, **kwargs)\u001b[39m\n\u001b[32m    973\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m974\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mcomplexjson\u001b[49m\u001b[43m.\u001b[49m\u001b[43mloads\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mtext\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    975\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m JSONDecodeError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m    976\u001b[39m     \u001b[38;5;66;03m# Catch JSON-related errors and raise as requests.JSONDecodeError\u001b[39;00m\n\u001b[32m    977\u001b[39m     \u001b[38;5;66;03m# This aliases json.JSONDecodeError and simplejson.JSONDecodeError\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/lib/python3.13/json/__init__.py:346\u001b[39m, in \u001b[36mloads\u001b[39m\u001b[34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[39m\n\u001b[32m    343\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[32m    344\u001b[39m         parse_int \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m parse_float \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[32m    345\u001b[39m         parse_constant \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_pairs_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m kw):\n\u001b[32m--> \u001b[39m\u001b[32m346\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_default_decoder\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    347\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/lib/python3.13/json/decoder.py:345\u001b[39m, in \u001b[36mJSONDecoder.decode\u001b[39m\u001b[34m(self, s, _w)\u001b[39m\n\u001b[32m    341\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Return the Python representation of ``s`` (a ``str`` instance\u001b[39;00m\n\u001b[32m    342\u001b[39m \u001b[33;03mcontaining a JSON document).\u001b[39;00m\n\u001b[32m    343\u001b[39m \n\u001b[32m    344\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m345\u001b[39m obj, end = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mraw_decode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midx\u001b[49m\u001b[43m=\u001b[49m\u001b[43m_w\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mend\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    346\u001b[39m end = _w(s, end).end()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/lib/python3.13/json/decoder.py:363\u001b[39m, in \u001b[36mJSONDecoder.raw_decode\u001b[39m\u001b[34m(self, s, idx)\u001b[39m\n\u001b[32m    362\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[32m--> \u001b[39m\u001b[32m363\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m JSONDecodeError(\u001b[33m\"\u001b[39m\u001b[33mExpecting value\u001b[39m\u001b[33m\"\u001b[39m, s, err.value) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m    364\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m obj, end\n",
-      "\u001b[31mJSONDecodeError\u001b[39m: Expecting value: line 1 column 1 (char 0)",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[31mJSONDecodeError\u001b[39m                           Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[76]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      2\u001b[39m dataset = {\u001b[33m\"\u001b[39m\u001b[33mname\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mOCR_marker_benchmark\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mreadme\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mMarker benchmark. See https://github.com/VikParuchuri/marker\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      3\u001b[39m            , \u001b[33m\"\u001b[39m\u001b[33mdefault_metric\u001b[39m\u001b[33m\"\u001b[39m : \u001b[33m\"\u001b[39m\u001b[33mocr_v1\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      4\u001b[39m            , \u001b[33m\"\u001b[39m\u001b[33mdf\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[33m\"\u001b[39m}\n\u001b[32m      6\u001b[39m response = requests.post(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mEG1_API_URL\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m/dataset\u001b[39m\u001b[33m'\u001b[39m, json=dataset, headers=eg1_headers)\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m dataset = \u001b[43mresponse\u001b[49m\u001b[43m.\u001b[49m\u001b[43mjson\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      8\u001b[39m dataset\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/main/missions/.venv/lib/python3.13/site-packages/requests/models.py:978\u001b[39m, in \u001b[36mResponse.json\u001b[39m\u001b[34m(self, **kwargs)\u001b[39m\n\u001b[32m    974\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m complexjson.loads(\u001b[38;5;28mself\u001b[39m.text, **kwargs)\n\u001b[32m    975\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m JSONDecodeError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m    976\u001b[39m     \u001b[38;5;66;03m# Catch JSON-related errors and raise as requests.JSONDecodeError\u001b[39;00m\n\u001b[32m    977\u001b[39m     \u001b[38;5;66;03m# This aliases json.JSONDecodeError and simplejson.JSONDecodeError\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m978\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m RequestsJSONDecodeError(e.msg, e.doc, e.pos)\n",
-      "\u001b[31mJSONDecodeError\u001b[39m: Expecting value: line 1 column 1 (char 0)"
-     ]
+     "data": {
+      "text/plain": [
+       "{'name': 'OCR_marker_benchmark',\n",
+       " 'readme': 'Marker benchmark. See https://github.com/VikParuchuri/marker',\n",
+       " 'default_metric': 'ocr_v1',\n",
+       " 'columns_map': None,\n",
+       " 'id': 74,\n",
+       " 'created_at': '2025-05-05T00:37:29.510387',\n",
+       " 'size': 0,\n",
+       " 'columns': [],\n",
+       " 'parquet_size': 0,\n",
+       " 'parquet_columns': []}"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -772,14 +772,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 83,
    "id": "7af51e32-5260-415e-a2fb-54ee2c87388f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40717171f9bd46c5a83c319cd0fc6c86",
+       "model_id": "36569e799913444a9cc8d4510a943051",
        "version_major": 2,
        "version_minor": 0
       },
@@ -795,7 +795,7 @@
      "output_type": "stream",
      "text": [
       "Upload successful!\n",
-      "{'name': 'OCR_marker_benchmark', 'readme': 'Marker benchmark. See https://github.com/VikParuchuri/marker', 'default_metric': 'ocr_v1', 'columns_map': None, 'id': 16, 'created_at': '2025-05-04T20:54:28.724067', 'size': 0, 'columns': [], 'parquet_size': 2138, 'parquet_columns': ['img', 'page_bbox', 'classification', 'language', 'pdf', 'uuid', 'json_output_true', 'markdown_true']}\n"
+      "{'name': 'OCR_marker_benchmark', 'readme': 'Marker benchmark. See https://github.com/VikParuchuri/marker', 'default_metric': 'ocr_v1', 'columns_map': None, 'id': 74, 'created_at': '2025-05-05T00:37:29.510387', 'size': 0, 'columns': [], 'parquet_size': 2138, 'parquet_columns': ['img', 'page_bbox', 'classification', 'language', 'pdf', 'uuid', 'json_output_true', 'markdown_true']}\n"
      ]
     }
    ],
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 84,
    "id": "434430e8-e558-4217-8095-175d4878c35f",
    "metadata": {},
    "outputs": [
@@ -839,7 +839,7 @@
      "output_type": "stream",
      "text": [
       "200\n",
-      "{'name': 'OCR_marker_benchmark', 'readme': 'Marker benchmark. See https://github.com/VikParuchuri/marker', 'default_metric': 'ocr_v1', 'columns_map': {'output_true': 'markdown_true'}, 'id': 16, 'created_at': '2025-05-04T20:54:28.724067', 'size': 0, 'columns': [], 'parquet_size': 2138, 'parquet_columns': ['img', 'page_bbox', 'classification', 'language', 'pdf', 'uuid', 'json_output_true', 'markdown_true']}\n"
+      "{'name': 'OCR_marker_benchmark', 'readme': 'Marker benchmark. See https://github.com/VikParuchuri/marker', 'default_metric': 'ocr_v1', 'columns_map': {'output_true': 'markdown_true'}, 'id': 74, 'created_at': '2025-05-05T00:37:29.510387', 'size': 0, 'columns': [], 'parquet_size': 2138, 'parquet_columns': ['img', 'page_bbox', 'classification', 'language', 'pdf', 'uuid', 'json_output_true', 'markdown_true']}\n"
      ]
     }
    ],
