fix dataset size

--- a/notebooks/create_marker_dataset.ipynb
+++ b/notebooks/create_marker_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 85,
    "id": "afd82f64-6a10-4aeb-af51-69046db4ac88",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 86,
    "id": "b1fa7696-c82c-4a43-8bca-497b783825c7",
    "metadata": {},
    "outputs": [
@@ -54,13 +54,13 @@
       "text/plain": [
        "DatasetDict({\n",
        "    train: Dataset({\n",
-       "        features: ['gt_blocks', 'img', 'page_bbox', 'classification', 'language', 'pdf', 'uuid'],\n",
+       "        features: ['img', 'page_bbox', 'classification', 'language', 'pdf', 'uuid', 'json_output_true', 'markdown_true'],\n",
        "        num_rows: 2138\n",
        "    })\n",
        "})"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,14 +772,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 89,
    "id": "7af51e32-5260-415e-a2fb-54ee2c87388f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36569e799913444a9cc8d4510a943051",
+       "model_id": "dedbda2d2e594f019ab43dbe9cd7c2ea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -795,7 +795,7 @@
      "output_type": "stream",
      "text": [
       "Upload successful!\n",
-      "{'name': 'OCR_marker_benchmark', 'readme': 'Marker benchmark. See https://github.com/VikParuchuri/marker', 'default_metric': 'ocr_v1', 'columns_map': None, 'id': 74, 'created_at': '2025-05-05T00:37:29.510387', 'size': 0, 'columns': [], 'parquet_size': 2138, 'parquet_columns': ['img', 'page_bbox', 'classification', 'language', 'pdf', 'uuid', 'json_output_true', 'markdown_true']}\n"
+      "{'name': 'OCR_marker_benchmark', 'readme': 'Marker benchmark. See https://github.com/VikParuchuri/marker', 'default_metric': 'ocr_v1', 'columns_map': {'output_true': 'markdown_true'}, 'id': 74, 'created_at': '2025-05-05T00:37:29.510387', 'size': 0, 'columns': [], 'parquet_size': 2138, 'parquet_columns': ['img', 'page_bbox', 'classification', 'language', 'pdf', 'uuid', 'json_output_true', 'markdown_true']}\n"
      ]
     }
    ],
@@ -818,7 +818,7 @@
     "\n",
     "# Upload the data using a streaming POST request\n",
     "headers = {'Content-Type': 'application/octet-stream'} | eg1_headers\n",
-    "response = requests.post(f'{EG1_API_URL}/dataset/{dataset[\"id\"]}/upload_parquet', data=stream_data(buffer), headers=headers)\n",
+    "response = requests.post(f'{EG1_API_URL}/dataset/{dataset[\"id\"]}/upload_parquet', data=stream_data(buffer, chunk_size=262144), headers=headers)\n",
     "\n",
     "# Check the response\n",
     "if response.ok:\n",
