change into notebook

--- a/notebooks/RAG-adhoc.ipynb
+++ b/notebooks/RAG-adhoc.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Ad-hoc RAG\n",
     "\n",
-    "Evaluate results from an ad-hoc RAG similar than the one behind franceservices.etalab.gouv.fr using eg1 and ModelRaw schema"
+    "Evaluate results from an ad-hoc RAG similar than the one behind franceservices.etalab.gouv.fr using evalap and ModelRaw schema"
    ]
   },
   {
@@ -32,16 +32,16 @@
     "\n",
     "dotenv.load_dotenv(\"../.env\")\n",
     "sys.path.append(\"..\")\n",
-    "from eg1.utils import log_and_raise_for_status\n",
+    "from evalap.utils import log_and_raise_for_status\n",
     "\n",
-    "#EG1_API_URL = \"http://localhost:8000/v1\"\n",
-    "EG1_API_URL = \"https://eg1.dev.etalab.gouv.fr/v1\"\n",
-    "EG1_API_KEY = os.getenv(\"EG1_API_KEY\") \n",
+    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
+    "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
+    "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
     "OPENAI_URL = \"https://api.openai.com/v1\"\n",
     "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
-    "headers = {\"Authorization\": f\"Bearer {EG1_API_KEY}\"}"
+    "headers = {\"Authorization\": f\"Bearer {EVALAP_API_KEY}\"}"
    ]
   },
   {
@@ -54,8 +54,8 @@
     "# Get the dataset\n",
     "dataset_name = \"MFS_questions_v01\"\n",
     "response = requests.get(\n",
-    "    f\"{EG1_API_URL}/dataset?name={dataset_name}&with_df=true\",\n",
-    "    headers={\"Authorization\": f\"Bearer {EG1_API_KEY}\"},\n",
+    "    f\"{EVALAP_API_URL}/dataset?name={dataset_name}&with_df=true\",\n",
+    "    headers={\"Authorization\": f\"Bearer {EVALAP_API_KEY}\"},\n",
     ")\n",
     "response.raise_for_status()\n",
     "dataset = response.json()\n",
@@ -281,8 +281,8 @@
     "}\n",
     "\n",
     "response = requests.post(\n",
-    "    f\"{EG1_API_URL}/experiment_set\",\n",
-    "    headers={\"Authorization\": f\"Bearer {EG1_API_KEY}\", \"Content-Encoding\": \"gzip\"},\n",
+    "    f\"{EVALAP_API_URL}/experiment_set\",\n",
+    "    headers={\"Authorization\": f\"Bearer {EVALAP_API_KEY}\", \"Content-Encoding\": \"gzip\"},\n",
     "    json=expset,\n",
     ")\n",
     "resp = response.json()\n",
