--- a/notebooks/create_marker_dataset.ipynb
+++ b/notebooks/create_marker_dataset.ipynb
@@ -20,15 +20,15 @@
     "\n",
     "dotenv.load_dotenv(\"../.env\")\n",
     "sys.path.append(\"..\")\n",
-    "from eg1.utils import log_and_raise_for_status\n",
+    "from evalap.utils import log_and_raise_for_status\n",
     "\n",
-    "#EG1_API_URL = \"http://localhost:8000/v1\"\n",
-    "EG1_API_URL = \"https://eg1.dev.etalab.gouv.fr/v1\"\n",
-    "EG1_API_KEY = os.getenv(\"EG1_API_KEY\") \n",
+    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
+    "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
+    "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
     "\n",
-    "eg1_headers = {\"Authorization\": f\"Bearer {EG1_API_KEY}\"}\n",
+    "evalap_headers = {\"Authorization\": f\"Bearer {EVALAP_API_KEY}\"}\n",
     "albert_headers = {\"Authorization\": f\"Bearer {ALBERT_API_KEY}\"}"
    ]
   },
@@ -452,7 +452,7 @@
    "id": "50d90dd6-5d08-4a6a-8af0-73e830d31e04",
    "metadata": {},
    "source": [
-    "### Push dataset on eg1\n",
+    "### Push dataset on EVALAP\n",
     "\n",
     "1. add `json_output_true` column in the dataset\n",
     "2. create the dataset (empty)\n",
@@ -750,7 +750,7 @@
     "           , \"default_metric\" : \"ocr_v1\"\n",
     "           , \"df\": \"{}\"}\n",
     "\n",
-    "response = requests.post(f'{EG1_API_URL}/dataset', json=dataset, headers=eg1_headers)\n",
+    "response = requests.post(f'{EVALAP_API_URL}/dataset', json=dataset, headers=evalap_headers)\n",
     "dataset = response.json()\n",
     "dataset"
    ]
@@ -802,8 +802,8 @@
     "ds['train'].to_parquet(buffer, compression=\"gzip\")\n",
     "\n",
     "# Upload the data using a streaming POST request\n",
-    "headers = {'Content-Type': 'application/octet-stream'} | eg1_headers\n",
-    "response = requests.post(f'{EG1_API_URL}/dataset/{dataset[\"id\"]}/upload_parquet', data=stream_data(buffer, chunk_size=262144), headers=headers)\n",
+    "headers = {'Content-Type': 'application/octet-stream'} | evalap_headers\n",
+    "response = requests.post(f'{EVALAP_API_URL}/dataset/{dataset[\"id\"]}/upload_parquet', data=stream_data(buffer, chunk_size=262144), headers=headers)\n",
     "\n",
     "# Check the response\n",
     "if response.ok:\n",
@@ -840,7 +840,7 @@
     "}\n",
     "\n",
     "# Make the PATCH request\n",
-    "response = requests.patch(f'{EG1_API_URL}/dataset/{dataset[\"id\"]}', headers=eg1_headers, data=json.dumps(data))\n",
+    "response = requests.patch(f'{EVALAP_API_URL}/dataset/{dataset[\"id\"]}', headers=evalap_headers, data=json.dumps(data))\n",
     "\n",
     "# Print the response\n",
     "print(response.status_code)\n",
