--- a/notebooks/run_dataset_experiences_demo.ipynb
+++ b/notebooks/run_dataset_experiences_demo.ipynb
@@ -5,10 +5,10 @@
    "id": "14ecbc85-47c2-454d-90c8-71d415f83288",
    "metadata": {},
    "source": [
-    "# Demo for launching dataset experiment in EG1\n",
+    "# Demo for launching dataset experiment in EVALAP\n",
     "\n",
-    "- code: https://github.com/etalab-ia/eg1\n",
-    "- api documentation: https://eg1.etalab.gouv.fr/redoc"
+    "- code: https://github.com/etalab-ia/evalap\n",
+    "- api documentation: https://evalap.etalab.gouv.fr/redoc"
    ]
   },
   {
@@ -30,7 +30,7 @@
     "\n",
     "dotenv.load_dotenv(\"../.env\")\n",
     "sys.path.append(\"..\")\n",
-    "from eg1.utils import log_and_raise_for_status\n",
+    "from evalap.utils import log_and_raise_for_status\n",
     "\n",
     "API_URL = \"http://localhost:8000\"\n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
