--- a/notebooks/run_ocr.ipynb
+++ b/notebooks/run_ocr.ipynb
@@ -25,16 +25,16 @@
     "\n",
     "dotenv.load_dotenv(\"../.env\")\n",
     "sys.path.append(\"..\")\n",
-    "from eg1.utils import log_and_raise_for_status\n",
+    "from evalap.utils import log_and_raise_for_status\n",
     "\n",
-    "#EG1_API_URL = \"http://localhost:8000/v1\"\n",
-    "EG1_API_URL = \"https://eg1.dev.etalab.gouv.fr/v1\"\n",
-    "EG1_API_KEY = os.getenv(\"EG1_API_KEY\") \n",
+    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
+    "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
+    "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
     "OPENAI_URL = \"https://api.openai.com/v1\"\n",
     "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
-    "headers = {\"Authorization\": f\"Bearer {EG1_API_KEY}\"}"
+    "headers = {\"Authorization\": f\"Bearer {EVALAP_API_KEY}\"}"
    ]
   },
   {
@@ -132,7 +132,7 @@
     "    \"readme\": expset_readme,\n",
     "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\":1}\n",
     "}\n",
-    "response = requests.post(f'{EG1_API_URL}/experiment_set', json=expset, headers=headers)\n",
+    "response = requests.post(f'{EVALAP_API_URL}/experiment_set', json=expset, headers=headers)\n",
     "resp = response.json()\n",
     "if \"id\" in resp:\n",
     "    expset_id = resp[\"id\"]\n",
