--- a/notebooks/run_set_ragmetrics_demo.ipynb
+++ b/notebooks/run_set_ragmetrics_demo.ipynb
@@ -29,16 +29,16 @@
     "\n",
     "dotenv.load_dotenv(\"../.env\")\n",
     "sys.path.append(\"..\")\n",
-    "from eg1.utils import log_and_raise_for_status\n",
+    "from evalap.utils import log_and_raise_for_status\n",
     "\n",
-    "#EG1_API_URL = \"http://localhost:8000/v1\"\n",
-    "EG1_API_URL = \"https://eg1.dev.etalab.gouv.fr/v1\"\n",
-    "EG1_API_KEY = os.getenv(\"EG1_API_KEY\") \n",
+    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
+    "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
+    "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.staging.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
     "MFS_API_URL = \"https://franceservices.etalab.gouv.fr/api/v1\"\n",
     "MFS_API_KEY = os.getenv(\"MFS_API_KEY\")\n",
-    "headers = {\"Authorization\": f\"Bearer {EG1_API_KEY}\"}"
+    "headers = {\"Authorization\": f\"Bearer {EVALAP_API_KEY}\"}"
    ]
   },
   {
@@ -138,7 +138,7 @@
     "    \"readme\": expset_readme,\n",
     "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\":3}\n",
     "}\n",
-    "response = requests.post(f'{EG1_API_URL}/experiment_set', json=expset, headers=headers)\n",
+    "response = requests.post(f'{EVALAP_API_URL}/experiment_set', json=expset, headers=headers)\n",
     "resp = response.json()\n",
     "if \"id\" in resp:\n",
     "    expset_id = resp[\"id\"]\n",
@@ -253,13 +253,13 @@
     "\n",
     "# Fetch results and compute macro metrics (mean, std etc).\n",
     "# --\n",
-    "response = requests.get(f'{EG1_API_URL}/experiment_set/{expset_id}', headers=headers)\n",
+    "response = requests.get(f'{EVALAP_API_URL}/experiment_set/{expset_id}', headers=headers)\n",
     "expset = response.json()\n",
     "rows = []\n",
     "for i, exp in enumerate(expset[\"experiments\"]):\n",
     "    # Get an experiment result\n",
     "    exp_id = exp[\"id\"]\n",
-    "    response = requests.get(f'{EG1_API_URL}/experiment/{exp_id}?with_results=true', headers=headers)\n",
+    "    response = requests.get(f'{EVALAP_API_URL}/experiment/{exp_id}?with_results=true', headers=headers)\n",
     "    experiment = response.json()\n",
     "    # experiment[\"name\"] # Name of the experiment\n",
     "    if experiment[\"experiment_status\"] != \"finished\":\n",
@@ -326,7 +326,7 @@
     "expset = {\n",
     "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\":3}\n",
     "}\n",
-    "response = requests.patch(f'{EG1_API_URL}/experiment_set/{expset_id}', json=expset, headers=headers)\n",
+    "response = requests.patch(f'{EVALAP_API_URL}/experiment_set/{expset_id}', json=expset, headers=headers)\n",
     "resp = response.json()\n",
     "if \"id\" in resp:\n",
     "    expset_id = resp[\"id\"]\n",
@@ -437,7 +437,7 @@
    "source": [
     "# RETRY failed experiment !\n",
     "# --\n",
-    "response = requests.post(f'{EG1_API_URL}/retry/experiment_set/{expset_id}', headers=headers)\n",
+    "response = requests.post(f'{EVALAP_API_URL}/retry/experiment_set/{expset_id}', headers=headers)\n",
     "response.json()"
    ]
   },
@@ -484,7 +484,7 @@
    "source": [
     "# Force Rerun observations/metrics\n",
     "# --\n",
-    "response = requests.patch(f'{EG1_API_URL}/experiment/150?with_results=true', headers=headers, json={\"metrics\":metrics, \"rerun_metrics\":True})\n",
+    "response = requests.patch(f'{EVALAP_API_URL}/experiment/150?with_results=true', headers=headers, json={\"metrics\":metrics, \"rerun_metrics\":True})\n",
     "response.json()"
    ]
   }
