Update notebook version

--- a/notebooks/run_experiments_demo.ipynb
+++ b/notebooks/run_experiments_demo.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "fb6038d3-def4-4fc4-8ae2-4327af3e919f",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "7e461411-899a-4cec-a14d-4ad419b30c9d",
    "metadata": {},
    "outputs": [
@@ -326,6 +326,24 @@
        "      <td>[output, output_true, query]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <td>judge_precision</td>\n",
+       "      <td>Binary precision of the output_true. Equal to one if the correct answer is contained in the given answer.</td>\n",
+       "      <td>llm</td>\n",
+       "      <td>[output, output_true, query]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>judge_rambling</td>\n",
+       "      <td>[1-10] rambling score between output and output_true</td>\n",
+       "      <td>llm</td>\n",
+       "      <td>[output, output_true, query]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>judge_relevant</td>\n",
+       "      <td>[1-10] relevance score between output and output_true</td>\n",
+       "      <td>llm</td>\n",
+       "      <td>[output, output_true, query]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <td>output_length</td>\n",
        "      <td>Number of words of the output</td>\n",
        "      <td>llm</td>\n",
@@ -338,22 +356,46 @@
        "      <td>[output, output_true]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <td>ocr_v1</td>\n",
+       "      <td>Levenshtein distance between the output and the ground-truth markdown.</td>\n",
+       "      <td>ocr</td>\n",
+       "      <td>[output, output_true]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>energy_consumption</td>\n",
+       "      <td>Energy consumption (kWh) - Environmental impact calculated by librairy ecologits</td>\n",
+       "      <td>ops</td>\n",
+       "      <td>[output]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <td>generation_time</td>\n",
        "      <td>The time to generate the answer/output</td>\n",
        "      <td>ops</td>\n",
-       "      <td>[query]</td>\n",
+       "      <td>[output]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>gwp_consumption</td>\n",
+       "      <td>Global Warming Potential (kgCO2eq) - Environmental impact calculated by librairy ecologits</td>\n",
+       "      <td>ops</td>\n",
+       "      <td>[output]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>nb_tokens_completion</td>\n",
        "      <td>Number of tokens in the completion</td>\n",
        "      <td>ops</td>\n",
-       "      <td>[query]</td>\n",
+       "      <td>[output]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>nb_tokens_prompt</td>\n",
        "      <td>Number of tokens in the prompt</td>\n",
        "      <td>ops</td>\n",
        "      <td>[query]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>nb_tool_calls</td>\n",
+       "      <td>Number of tools that has been called for the generation</td>\n",
+       "      <td>ops</td>\n",
+       "      <td>[output]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -362,7 +404,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
