--- a/docs/src/pages/index.mdx
+++ b/docs/src/pages/index.mdx
@@ -9,7 +9,7 @@ import Card from '@site/src/components/Card';
 
 
 **EvalAP** (**Eval**uation **A**PI and **P**latform) is a high-level service designed to perform model evaluations. 
-It provides a comprehensive API designed for Large Language Model (LLM) and IA agent in general. It also feature a platform to navigate, analyze and share results.
+It provides a comprehensive API designed for Large Language Models (LLM) and IA agents in general. It also feature a platform to navigate, analyze and share results.
 
 <section style={{
     display: 'flex',
