--- a/docs/src/pages/index.mdx
+++ b/docs/src/pages/index.mdx
@@ -3,13 +3,13 @@ import Card from '@site/src/components/Card';
 # Welcome to EvalAP
 
 <div class="text--center"> 
-  <img src="/img/android-chrome-192x192.png" /> 
+  <img src="img/android-chrome-192x192.png" /> 
 </div>
 
 
 
 **EvalAP** (**Eval**uation **A**PI and **P**latform) is a high-level service designed to perform model evaluations. 
-It provides a comprehensive API designed for Large Language Model (LLM) and IA agent in general. It also feature a platform to navigate, analyze and share results.
+It provides a comprehensive API designed for Large Language Models (LLM) and IA agents in general. It also feature a platform to navigate, analyze and share results.
 
 <section style={{
     display: 'flex',
