--- a/docs/src/pages/index.mdx
+++ b/docs/src/pages/index.mdx
@@ -2,10 +2,14 @@ import Card from '@site/src/components/Card';
 
 # Welcome to EvalAP
 
-<div class="text--center"> 
-  <img src="img/android-chrome-192x192.png" /> 
+<div style={{ display: 'flex', justifyContent: 'center', alignItems: 'center', gap: '100px' }}>
+  <div>
+    <img src="img/android-chrome-192x192.png" />
+  </div>
+  <div>
+    <img src="img/leaderboard2-alpha.png" style={{ maxWidth: '400px', height: 'auto' }} />
+  </div>
 </div>
-
 
 
 **EvalAP** (**Eval**uation **A**PI and **P**latform) is a high-level service designed to perform model evaluations. 
@@ -101,5 +105,6 @@ It provides a comprehensive API designed for Large Language Models (LLM) and IA 
     </div>
   </div>
 </div>
+
 
 
