fix: minor typo and Readme update

--- a/docs/src/pages/index.mdx
+++ b/docs/src/pages/index.mdx
@@ -99,8 +99,8 @@ It provides a comprehensive API designed for Large Language Models (LLM) and IA 
 <div className="container" style={{ marginTop: '3rem', marginBottom: '3rem' }}>  
   <div className="row">
     <div className="col" style={{ display: 'flex', justifyContent: 'center', gap: '2rem' }}>
-      <a href="/docs" className="button button--primary button--lg">Documentation</a>
-      <a href="https://github.com/yourusername/evalap" className="button button--secondary button--lg">GitHub Repository</a>
+      <a href="/doc/docs" className="button button--primary button--lg">Documentation</a>
+      <a href="https://github.com/etalab-ia/evalap" className="button button--secondary button--lg">GitHub Repository</a>
       <a href="https://evalap.etalab.gouv.fr" className="button button--info button--lg">Public Platform</a>
     </div>
   </div>
