fix: Model.aliased_name takes precedence

--- a/notebooks/RAG-hybrid.ipynb
+++ b/notebooks/RAG-hybrid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "587a2251-9dc2-4a66-b48f-3eb49cf6b5bf",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
     "\n",
     "#EG1_API_URL = \"http://localhost:8000/v1\"\n",
     "EG1_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
-    "EG1_API_KEY = os.getenv(\"EG1_API_KEY\") \n",
+    "EG1_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
     "ALBERT_API_URL_DEV = \"https://albert.api.dev.etalab.gouv.fr/v1\"\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "ecb4a91a-09aa-49dc-8d1c-682ca14b111f",
    "metadata": {},
    "outputs": [
@@ -43,46 +43,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created expset: albert-api-rag-mfs-v1 (65)\n"
+      "Created expset: albert-api-rag-mfs-v2 (68)\n"
      ]
     }
    ],
    "source": [
     "# Designing my experiments\n",
     "# --\n",
-    "expset_name = \"albert-api-rag-mfs-v1\"\n",
+    "expset_name = \"albert-api-rag-mfs-v2\"\n",
     "expset_readme = \"Evaluating hybrid search on MFS dataset.\"\n",
     "metrics = [\"judge_precision\", \"output_length\", \"generation_time\"]\n",
     "common_params = {\n",
     "    \"dataset\" : \"MFS_questions_v01\",\n",
     "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}},\n",
     "    \"metrics\" : metrics,\n",
-    "    \"judge_model\": \"gpt-4o\",\n",
+    "    \"judge_model\": \"gpt-4.1\",\n",
     "}\n",
     "grid_params = {\n",
     "    \"model\": [\n",
     "        {\n",
-    "            \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\", \n",
-    "            \"aliased_name\": \"albert-large-semantic\",\n",
+    "            \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
+    "            \"aliased_name\": \"albert-large-semantic-qdrant\",\n",
     "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"semantic\", \"collections\": [784,785], \"k\":10}},\n",
     "            \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
     "        },\n",
     "        {\n",
     "            \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\", \n",
-    "            \"aliased_name\": \"albert-large-semantic\",\n",
-    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"semantic\", \"collections\": [17,18], \"k\":10}},\n",
+    "            \"aliased_name\": \"albert-large-semantic-elastic\",\n",
+    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"semantic\", \"collections\": [20,21], \"k\":10}},\n",
     "            \"base_url\": ALBERT_API_URL_DEV, \"api_key\": ALBERT_API_KEY_DEV\n",
     "        },\n",
-    "        #{\n",
-    "        #    \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\", \n",
-    "        #    \"aliased_name\": \"albert-large-semantic\",\n",
-    "        #    \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"lexical\", \"collections\": [17,18], \"k\":10}},\n",
-    "        #    \"base_url\": ALBERT_API_URL_DEV, \"api_key\": ALBERT_API_KEY_DEV\n",
-    "        #},\n",
     "        {\n",
     "            \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\", \n",
-    "            \"aliased_name\": \"albert-large-semantic\",\n",
-    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"hybrid\", \"collections\": [17,18], \"k\":10}},\n",
+    "            \"aliased_name\": \"albert-large-lexical-elastic\",\n",
+    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"lexical\", \"collections\": [20,21], \"k\":10}},\n",
+    "            \"base_url\": ALBERT_API_URL_DEV, \"api_key\": ALBERT_API_KEY_DEV\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\", \n",
+    "            \"aliased_name\": \"albert-large-hybrid-elastic\",\n",
+    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"hybrid\", \"collections\": [20,21], \"k\":10}},\n",
     "            \"base_url\": ALBERT_API_URL_DEV, \"api_key\": ALBERT_API_KEY_DEV\n",
     "        },\n",
     "    ],\n",
