--- a/notebooks/run_experiments_demo.ipynb
+++ b/notebooks/run_experiments_demo.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "fb6038d3-def4-4fc4-8ae2-4327af3e919f",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "450399aa-f836-47b7-b6f6-2541da8a9f27",
    "metadata": {},
    "outputs": [
@@ -194,15 +194,16 @@
        "{'name': 'MFS_questions_v01',\n",
        " 'readme': 'MFS dataset with ground truth',\n",
        " 'default_metric': 'judge_notator',\n",
-       " 'id': 4,\n",
-       " 'created_at': '2025-01-31T10:49:31.559503',\n",
-       " 'has_query': True,\n",
-       " 'has_output': False,\n",
+       " 'columns_map': None,\n",
+       " 'id': 1,\n",
+       " 'created_at': '2025-08-07T21:52:28.949956',\n",
        " 'size': 39,\n",
-       " 'columns': ['query', 'output_true', 'top_valid', 'operateur', 'thematique']}"
+       " 'columns': ['query', 'output_true', 'top_valid', 'operateur', 'thematique'],\n",
+       " 'parquet_size': 0,\n",
+       " 'parquet_columns': []}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
