fix: patch endpoints

--- a/notebooks/RAG-hybrid.ipynb
+++ b/notebooks/RAG-hybrid.ipynb
@@ -107,18 +107,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "dcfcd6b6-0019-4c19-915d-623ab8e4d045",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created expset: albert-api-rag-mfs-v1 (65)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Patching the experiment set\n",
     "\n",
@@ -126,15 +118,21 @@
     "    \"dataset\" : \"MFS_questions_v01\",\n",
     "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}},\n",
     "    \"metrics\" : metrics,\n",
-    "    \"judge_model\": \"gpt-4o\",\n",
+    "    \"judge_model\": \"gpt-4.1\",\n",
     "}\n",
     "grid_params = {\n",
     "    \"model\": [\n",
     "        {\n",
+    "            \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
+    "            \"aliased_name\": \"albert-large-dry-3.2\",\n",
+    "            \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
+    "        },\n",
+    "        {\n",
     "            \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\", \n",
-    "            \"aliased_name\": \"albert-large\",\n",
+    "            \"aliased_name\": \"albert-large-dry-3.1\",\n",
     "            \"base_url\": ALBERT_API_URL_DEV, \"api_key\": ALBERT_API_KEY_DEV\n",
     "        },\n",
+    "\n",
     "    ],\n",
     "}\n",
     "\n",
@@ -154,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3edb30d2-2d94-4e82-a992-c925046afe22",
+   "id": "127969d5-6c86-4742-88e6-c7bbf552e27f",
    "metadata": {},
    "outputs": [],
    "source": []
