--- a/notebooks/RAG-hybrid.ipynb
+++ b/notebooks/RAG-hybrid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "587a2251-9dc2-4a66-b48f-3eb49cf6b5bf",
    "metadata": {},
    "outputs": [],
@@ -107,10 +107,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "dcfcd6b6-0019-4c19-915d-623ab8e4d045",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Patched expset: albert-api-rag-mfs-v1 (3)\n"
+     ]
+    }
+   ],
    "source": [
     "# Patching the experiment set\n",
     "\n",
