--- a/notebooks/RAG-hybrid.ipynb
+++ b/notebooks/RAG-hybrid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "587a2251-9dc2-4a66-b48f-3eb49cf6b5bf",
    "metadata": {},
    "outputs": [],
@@ -159,8 +159,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "e6d54607-6e3d-4763-b028-6d65cb7b6603",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expset_name = \"albert-api-rag-mfs-v3\"\n",
+    "expset_readme = \"Evaluating hybrid search on MFS dataset.\"\n",
+    "metrics = [\"judge_precision\", \"output_length\", \"generation_time\"]\n",
+    "common_params = {\n",
+    "    \"dataset\" : \"MFS_questions_v01\",\n",
+    "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}},\n",
+    "    \"metrics\" : metrics,\n",
+    "    \"judge_model\": \"gpt-4.1\",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "127969d5-6c86-4742-88e6-c7bbf552e27f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Patched expset: albert-api-rag-mfs-v3 (68)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Patching the experiment set\n",
+    "\n",
+    "common_params = {\n",
+    "    \"dataset\" : \"MFS_questions_v01\",\n",
+    "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}},\n",
+    "    \"metrics\" : metrics,\n",
+    "    \"judge_model\": \"gpt-4.1\",\n",
+    "}\n",
+    "grid_params = {\n",
+    "    \"model\": [\n",
+    "        {\n",
+    "            \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\", \n",
+    "            \"aliased_name\": \"albert-large-hybrid-web-elastic\",\n",
+    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"hybrid\", \"web_search\": True, \"k\":10}},\n",
+    "            \"base_url\": ALBERT_API_URL_DEV, \"api_key\": ALBERT_API_KEY_DEV\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
+    "            \"aliased_name\": \"albert-large-semantic-web-qdrant\",\n",
+    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"semantic\", \"web_search\": True, \"k\":10}},\n",
+    "            \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
+    "        },\n",
+    "        \n",
+    "\n",
+    "    ],\n",
+    "}\n",
+    "\n",
+    "expset = {\n",
+    "\n",
+    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\":5}\n",
+    "}\n",
+    "response = requests.patch(f'{EG1_API_URL}/experiment_set/{expset_id}', json=expset, headers=headers)\n",
+    "resp = response.json()\n",
+    "if \"id\" in resp:\n",
+    "    expset_id = resp[\"id\"]\n",
+    "    print(f'Patched expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
+    "else:\n",
+    "    print(resp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc2ca1dd-d313-458f-a316-2aa5ecfd3a4e",
    "metadata": {},
    "outputs": [],
    "source": []
